--- a/index.html
+++ b/index.html
@@ -337,9 +337,9 @@
         <div class="col-md-12">
           <div class="titlepage">
             <h2>Learn <strong class="yellow">the Practical way</strong></h2>
-            <span>packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem
-              ipsum' will uncover many web sites still in their infancy. Various versions have evolved over the years,
-              sometimes by accident, sometimes on purpose (injected humour and the like).</span>
+            <span>We have internships in real companies, to improve the experience and encourage our 
+              students to polish their skills to be at the level of our partners. In charge of this 
+              are Ms. Merilyn Isanez Perez de León and Alexander Aniel, a software engineer.</span>
           </div>
         </div>
       </div>
@@ -365,16 +365,10 @@
       <div class="row">
         <div class="col-xl-5 col-lg-5 col-md-5 col-sm-12">
           <div class="make_text">
-            <p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical
-              Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin professor at
-              Hampden-Sydney College in Virginia, looked up one of the more obscure Latin words, consectetur, from a
-              Lorem Ipsum passage, and going through the cites of the word in classical literature, discovered the
-              undoubtable source. Lorem Ipsum comes from sections 1.10.32 and 1.10.33 of "de Finibus Bonorum et Malorum"
-              (The Extremes of Good and Evil) by Cicero, written in 45 BC. This book is a treatise on the theory of
-              ethics, very popular during the Renaissance. The first line of Lorem Ipsum, "Lorem ipsum dolor sit
-              amet..", comes from a line in section 1.10.32.
+            <p>If programming is not your thing, we also have an area of ​​computer networks, 
+              this is under the charge of the network professional, engineer Franklin Tiburcio.
             </p>
-            <a href="Javascript:void(0)">Strat now</a>
+            <a href="Javascript:void(0)">Start now</a>
           </div>
         </div>
         <div class="col-xl-5 col-lg-5 col-md-5 col-sm-12">
@@ -446,10 +440,8 @@
               </form>
             </div>
             <div class="col-md-12">
-              <h2>Newsletter</h2>
-              <span>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of
-                classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock, a Latin
-                professor at Hampden-Sydney College in </span>
+              <h2>NeThis project belongs to a task and only to that, 
+                it tries to design a web page and nothing else. </span>
             </div>
             <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 ">
               <div class="row">
@@ -462,10 +454,10 @@
                         <br>Dominican Republic
                       </li>
                       <li>
-                        <a href="#"><img src="icon/email.png" alt="#" /></a>demo@gmail.com
+                        <a href="#"><img src="icon/email.png" alt="#" /></a>Marjhory 2021-1046
                       </li>
                       <li>
-                        <a href="#"><img src="icon/call.png" alt="#" /></a>+12586954775
+                        <a href="#"><img src="icon/call.png" alt="#" /></a>Jefferson 2021-0308
                       </li>
                     </ul>
                     <ul class="social_link">
@@ -482,10 +474,10 @@
                     <h3>Courses</h3>
                     <ul class="Menu_footer">
                       <li class="active"> <a href="#">Masters Degree</a> </li>
-                      <li><a href="#">Post GraduateU</a> </li>
-                      <li><a href="#">Ndergraduate</a> </li>
-                      <li><a href="#">Engineering</a> </li>
-                      <li><a href="#">Ph.D Degree</a> </li>
+                      <li><a href="#">Ferwis 2021-0617</a> </li>
+                      <li><a href="#">Merilyn 2021-0160</a> </li>
+                      <li><a href="#">Alexander Aniel 2021-0827</a> </li>
+                      <li><a href="#">Franklin 2020-10252</a> </li>
                     </ul>
                   </div>
                 </div>
